[package]
name = "rust"
version = "0.1.0"
authors = ["Nbiba Bedis <bedisnbiba@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = "0.9"
message-io = "0.5.1"
serde = { version = "1.0.116", features = ["derive"] }


#[target.aarch64-linux-android]
#linker = "/opt/android-ndk/toolchains/llvm/prebuilt/linux-x86_64/bin/aarch64-linux-android29-clang"
